Fix css overflow problem

--- a/styles/shop.css
+++ b/styles/shop.css
@@ -40,8 +40,7 @@
 
 .buy {
     padding: 0 1rem;
-    max-width: 78%;
-    flex-basis: 1;
+    max-width: 72%;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -69,7 +68,6 @@
 }
 
 .data {
-    width: 50%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
